--- a/udagram-feed-api/Dockerfile
+++ b/udagram-feed-api/Dockerfile
@@ -17,7 +17,7 @@ COPY . .
 RUN npm run build
 
 # Bind the port that the image will run on
-EXPOSE 8081
+EXPOSE 8080
 
 # Define the Docker image's behavior at runtime
-CMD ["node", "server.js"]
+CMD ["node", "./www/server.js"]
