--- a/.travis.yml
+++ b/.travis.yml
@@ -17,14 +17,15 @@ script:
   - docker --version # print the version for logging
   - docker build -t udagram-frontend ./udagram-frontend
   - docker build -t udagram-user-api ./udagram-user-api
-  - docker build -t udagram-feed-api ./udagram-feed-api
+  ## TODO: Take dockerfile input it to a pipe replace placeholders with credentials
+  # - docker build -t udagram-feed-api --build-arg AWS_ACCESS_KEY=$AWS_ACCESS_KEY --build-arg AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY ./udagram-feed-api
   - docker tag udagram-frontend mfathy89/udagram-frontend:latest
   - docker tag udagram-user-api mfathy89/udagram-user-api:latest
-  - docker tag udagram-feed-api mfathy89/udagram-feed-api:latest
+  # - docker tag udagram-feed-api mfathy89/udagram-feed-api:latest
 
 # Tasks to perform after the process is successful. Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker push mfathy89/udagram-user-api
-  - docker push mfathy89/udagram-feed-api
+  # - docker push mfathy89/udagram-feed-api
   - docker push mfathy89/udagram-frontend
