lambda function added

--- a/.aws/feed-deployment.yml
+++ b/.aws/feed-deployment.yml
@@ -74,5 +74,7 @@ spec:
          valueFrom:
            configMapKeyRef:
              name: env-config
-             key: POSTGRES_USERNAME     
+             key: POSTGRES_USERNAME  
+       - name: QUOTER_URL
+         value: "https://1b60udyph9.execute-api.us-east-2.amazonaws.com/dev"
      restartPolicy: Always
