--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ script:
   - docker tag udagram-frontend mfathy89/udagram-frontend:latest
   - docker tag udagram-user-api mfathy89/udagram-user-api:latest
   # - docker tag udagram-feed-api mfathy89/udagram-feed-api:latest
+  ## Testing script
+  - bash ./git_test.sh
 
 # Tasks to perform after the process is successful. Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
 after_success:
