--- a/udagram-feed-api/package.json
+++ b/udagram-feed-api/package.json
@@ -10,7 +10,7 @@
     "prod": "tsc && node ./www/server.js",
     "clean": "rm -rf www/ || true",
     "build": "npm run clean && tsc && cp -rf src/config www/config && cp .npmrc www/.npmrc && cp package.json www/package.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register src/**/*.spec.ts"
   },
   "keywords": [],
   "author": "Gabriel Ruttner",
@@ -41,6 +41,9 @@
     "@typescript-eslint/parser": "^2.19.2",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
+    "@types/chai": "4.2.0",
+    "@types/chai-http": "^4.2.0",
+    "@types/mocha": "^8.2.0",
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
     "mocha": "^6.1.4",
