--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,15 @@ services:
 
 # Pre-testing installs
 install:
-  - echo "nothing needs to be installed"
+  - cd ./udagram-feed-api
+  - npm i
+  - cd ..
 
 # Scripts to be run such as tests
 before_script:
-  - echo "no tests"
+  - echo "############### Testing script"
+  - bash ./git_test.sh
+  - echo "############### Test Completed"
 
 script:
   - docker --version # print the version for logging
@@ -22,8 +26,6 @@ script:
   - docker tag udagram-frontend mfathy89/udagram-frontend:latest
   - docker tag udagram-user-api mfathy89/udagram-user-api:latest
   # - docker tag udagram-feed-api mfathy89/udagram-feed-api:latest
-  ## Testing script
-  - bash ./git_test.sh
 
 # Tasks to perform after the process is successful. Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
 after_success:
