--- a/udagram-chaos-api/Dockerfile
+++ b/udagram-chaos-api/Dockerfile
@@ -16,8 +16,5 @@ COPY . .
 
 RUN npm run build
 
-# Bind the port that the image will run on
-EXPOSE 8080
-
 # Define the Docker image's behavior at runtime
-CMD ["node", "./www/server.js"]
+CMD ["node", "./www/app.js"]
